# learn_c

./: readme.md
c/: readme.md
c/helloWorld/: main.c  print_date.c  print_date.h  print_greetings.c  readme.md
c/helloWorld/lib/: date_fns.c  greetings_fns.c  greetings_fns.h
c/hello_world/: makefile
c/hello_world/lib/: date_fns.h
c/prime_finder_1/: makefile  readme.md
c/prime_finder_1/src/: main.c
cpp/: readme.md
cpp/helloWorld/: main.cpp  readme.md
cpp/helloWorld/lib/: date_fns.cpp  greetings_fns.cpp  print_greetings.hpp
cpp/hello_sfml_cmake/: CMakeLists.txt  readme.md
cpp/hello_sfml_cmake/src/: main.cpp
cpp/hello_sfml_cmake/test/: main.cpp
cpp/hello_world/: makefile
cpp/hello_world/src/: main.cpp
